--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-TOKEN=MTIwOTUwNDUyMTE4MTU5MzcyMA.GloJ9Y.765rwPLJry6ylGRmgjKUrvvcGkkyENe0m-_5SI
+TOKEN=MTIxMjA1Mzk5ODg0MDg0NDMwOA.GuojJo.82-_bLGC2C9XcQzoiuGU3RTZPtXnUUhvkeVs_c
+
+API_KEY=AIzaSyAVrDnMSZKfBSMYAAv8xtRQ_OxROLmbHJM
