--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
+    "axios": "^1.6.7",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "openai": "^4.28.0"
   }
 }
