removendo coisas desnecessarias

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTIxMjA1Mzk5ODg0MDg0NDMwOA.GuojJo.82-_bLGC2C9XcQzoiuGU3RTZPtXnUUhvkeVs_c
+TOKEN=
 
-API_KEY=AIzaSyAVrDnMSZKfBSMYAAv8xtRQ_OxROLmbHJM
+API_KEY=
