--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=
+TOKEN=MTIwOTUwNDUyMTE4MTU5MzcyMA.GoX1fL.0bn-aIlNaxE9DCCCVT-GCoFGvm4k6JHWikP6X4
 
-API_KEY=
+API_KEY=AIzaSyAVrDnMSZKfBSMYAAv8xtRQ_OxROLmbHJM
