--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTIwOTUwNDUyMTE4MTU5MzcyMA.GoX1fL.0bn-aIlNaxE9DCCCVT-GCoFGvm4k6JHWikP6X4
+TOKEN=
 
-API_KEY=AIzaSyAVrDnMSZKfBSMYAAv8xtRQ_OxROLmbHJM
+API_KEY=
