--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTIxMjA1Mzk5ODg0MDg0NDMwOA.GuojJo.82-_bLGC2C9XcQzoiuGU3RTZPtXnUUhvkeVs_c
+TOKEN=MTIwOTUwNDUyMTE4MTU5MzcyMA.G_9AgL.Lr_qGj9_7oEe02oA3ezRGfyyUo4AZKjoL9Lnsc
 
 API_KEY=AIzaSyAVrDnMSZKfBSMYAAv8xtRQ_OxROLmbHJM
