--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TOKEN=MTIwOTUwNDUyMTE4MTU5MzcyMA.G_9AgL.Lr_qGj9_7oEe02oA3ezRGfyyUo4AZKjoL9Lnsc
+TOKEN=
 
-API_KEY=
+API_KEY=AIzaSyAVrDnMSZKfBSMYAAv8xtRQ_OxROLmbHJM
